--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,10 +1,10 @@
 .Footer {
-   font-size: 10px;
-   padding: 1em 0;
-   background-color: blueviolet;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 .Footer__content {
-    font-size: .8em;
+    font-size: 1.8em;
     line-height: 1.5em;
 }
