--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -1,3 +1,26 @@
-.Button {
-    border-radius: 5px;
+button,
+button::after {
+    -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+        transition: all 0.3s;
+}
+
+button {
+    background: none;
+    width: 40px;
+    text-align: center;
+    border: 3px solid #fff;
+    border-radius: 6px;
+    color: #fff;
+    display: block;
+    font-weight: bold;
+    margin: 1em auto;
+    padding: 1em 6em;
+    position: relative;
+    text-transform: uppercase;
+}
+
+button:hover {
+    color: #2ecc71;
 }
