--- a/src/components/LoginForm/styles.scss
+++ b/src/components/LoginForm/styles.scss
@@ -1,3 +1,23 @@
 .LoginForm {
-    background-color: blue;
+    background-color: #00dcff;
+}
+
+form {    
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding-top: 25px;
+    align-items: center;        
+}
+
+input {
+    border: none;
+    background: none;
+    outline:none;
+    color: white;
+    width: 15%;
+    border-bottom: 1px solid white;
+    text-indent: 1.5em;
+    line-height: 4em;
+    font-size: 0.8em;
 }
