--- a/src/pages/Welcome/styles.scss
+++ b/src/pages/Welcome/styles.scss
@@ -1,7 +1,17 @@
 .Application {
-    font-size: 16px;
+    background-color: rebeccapurple;
+}
+
+img {
+    height: 200px;
 }
 
 .Application__header {
-    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+}
+
+p {
+    font-size: 30px;
+    margin-left: 30px;
 }
