Connect redux to the app, create reducers

--- a/src/pages/Welcome/styles.scss
+++ b/src/pages/Welcome/styles.scss
@@ -1,14 +1,11 @@
 .Application {
     background-color: rebeccapurple;
-}
-
-img {
-    height: 200px;
+    min-height: 765px;
 }
 
 .Application__header {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
 }
 
 p {
